appId: com.fuelgood.ios
---
- runFlow:
    when:
      visible: "Don't Allow"
    commands:
      - tapOn: "Don't Allow"
      - waitForAnimationToEnd:
          timeout: 1500
- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"
      - waitForAnimationToEnd:
          timeout: 1500
- runFlow:
    when:
      visible: "OK"
    commands:
      - tapOn: "OK"
      - waitForAnimationToEnd:
          timeout: 1500
- waitForAnimationToEnd:
    timeout: 1500
